--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@nuxtjs/firebase": "^7.1.0",
     "core-js": "^3.6.5",
     "firebase": "^8.0.2",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "xlsx": "^0.16.8"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2"
