--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "firebase": "^8.0.2",
     "nuxt": "^2.14.6",
+    "sweetalert": "^2.1.2",
     "xlsx": "^0.16.8"
   },
   "devDependencies": {
